[project]
name = "YoloCR"
version = "1.1.2"
description = "YoloCR is a convenient OCR toolkit"
authors = [
    {name = "Ryu1845", email = "ryu@tpgjbo.xyz"},
]
dependencies = []
dev-dependencies = []
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "GPLv3"}

[project.urls]
homepage = "https://github.com/Ryu1845/YoloCR"

[tool]
[tool.pdm]

[tool.semantic_release]
version_toml = ['pyproject.toml:project.version']
version_source = "tag"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
