[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Ryu18", email = "ryu@tpgjbo.xyz"},
]
dependencies = [
    "pyslibtesseract~=0.0",
    "html2text~=2020.1",
    "tqdm~=4.61",
]
dev-dependencies = []
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "GPLv2"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
